--- a/hms_app/views/doctor.xml
+++ b/hms_app/views/doctor.xml
@@ -32,5 +32,6 @@
     <menuitem id="menu_doctor"
               name="Doctors"
               parent="menu_hms"
+              groups="hms_app.hms_manager_group"
               action="hms_doctor_action"/>
 </odoo>
