--- a/hms_app/views/patient.xml
+++ b/hms_app/views/patient.xml
@@ -46,7 +46,7 @@
                         <group string="Additional Info">
                             <field name="department_id" domain="[('is_opened', '=', 'True')]"/>
                             <field name="department_capacity"/>
-                            <field name="doctor_ids" widget="many2many_tags" readonly="department_id == False"/>
+                            <field name="doctor_ids" widget="many2many_tags" readonly="department_id == False" groups="hms_app.hms_manager_group"/>
                         </group>
 
                         <group string="History Log">
